<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/bottomsheetConfirmCancel"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmCancelPrompt"
        android:textColor="@color/orange"
        android:textSize="@dimen/_19sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:fontFamily="@font/fredoka_one" />

    <Button
        android:id="@+id/bottomsheetConfirmCancelYes"
        android:layout_width="@dimen/_162sdp"
        android:layout_height="@dimen/_31sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/yesText"
        android:background="@drawable/button_delete"
        app:fontFamily="@font/fredoka_one"
        android:textSize="@dimen/_14sdp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/bottomsheetConfirmCancelNo"
        android:layout_width="@dimen/_162sdp"
        android:layout_height="@dimen/_31sdp"
        android:layout_marginBottom="@dimen/_23sdp"
        android:text="@string/noText"
        android:background="@drawable/button_rounded"
        app:fontFamily="@font/fredoka_one"
        android:textSize="@dimen/_14sdp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:layout_gravity="center" />

</LinearLayout>