<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/needHelpConnect4ExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_icon_background"
        android:padding="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_gravity="end"
        android:onClick="backButtonFromSettingsClicked" >

        <ImageView
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:background="@drawable/ic_close" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_23sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_19sdp"
                    android:text="@string/howToPlayText"
                    android:textColor="@color/darkGray"
                    android:layout_marginLeft="@dimen/_23sdp"
                    app:fontFamily="@font/fredoka_one"/>

                <TextView
                    android:id="@+id/howToPlayConnect4ShowHideButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/showText"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="@dimen/_8sdp"
                    app:fontFamily="@font/fredoka_one"
                    android:visibility="gone"/>

            </LinearLayout>

            <GridLayout
                android:id="@+id/howToPlayConnect4Instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_35sdp"
                android:rowCount="5"
                android:columnCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="1."
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:fontFamily="@font/fredoka_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/howToPlayConnect4Text1"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_42sdp"
                    app:fontFamily="@font/fredoka_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="2."
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:fontFamily="@font/fredoka_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/howToPlayConnect4Text2"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_42sdp"
                    app:fontFamily="@font/fredoka_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:fontFamily="@font/fredoka_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/howToPlayConnect4Text3"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_42sdp"
                    app:fontFamily="@font/fredoka_one"/>

            </GridLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_19sdp"
                    android:text="@string/playOnlineText"
                    android:textColor="@color/darkGray"
                    android:layout_marginLeft="@dimen/_23sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    app:fontFamily="@font/fredoka_one"/>

                <TextView
                    android:id="@+id/playingOnlineConnect4ShowHideButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/showText"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    app:fontFamily="@font/fredoka_one"
                    android:visibility="gone"/>

            </LinearLayout>

            <GridLayout
                android:id="@+id/playingOnlineConnect4Instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_35sdp"
                android:rowCount="5"
                android:columnCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="1."
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:fontFamily="@font/fredoka_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/playingOnlineText1"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_42sdp"
                    app:fontFamily="@font/fredoka_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="2."
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:fontFamily="@font/fredoka_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/playingOnlineText2"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_42sdp"
                    app:fontFamily="@font/fredoka_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="3."
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:fontFamily="@font/fredoka_one"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/playingOnlineText3"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_42sdp"
                    app:fontFamily="@font/fredoka_one"/>

            </GridLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>