<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/settingsButtonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_icon_background"
        android:padding="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginRight="@dimen/_4sdp"
        android:onClick="settingsClicked"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible">

        <ImageView
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:background="@drawable/ic_settings" />

    </LinearLayout>

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name2"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_23sdp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsButtonHome" />

    <ProgressBar
        android:id="@+id/homeProgressBar"
        android:indeterminateDrawable="@drawable/progress_circle"
        android:layout_width="@dimen/_31sdp"
        android:layout_height="@dimen/_31sdp"
        app:layout_constraintBottom_toTopOf="@+id/homeButtonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/homeButtonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/_31sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="@dimen/_162sdp"
            android:layout_height="@dimen/_31sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/startGameText"
            android:background="@drawable/button_rounded"
            app:fontFamily="@font/fredoka_one"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:onClick="startGameClicked" />

        <Button
            android:id="@+id/activeRoomsButtonMain"
            android:layout_width="@dimen/_162sdp"
            android:layout_height="@dimen/_31sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/activeRoomsText"
            android:background="@drawable/button_rounded"
            app:fontFamily="@font/fredoka_one"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:onClick="activeGamesClicked" />

        <Button
            android:id="@+id/changeStyleButton"
            android:layout_width="@dimen/_162sdp"
            android:layout_height="@dimen/_31sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/changeStyleText"
            android:background="@drawable/button_rounded"
            app:fontFamily="@font/fredoka_one"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:onClick="changeStyleClicked"
            android:visibility="gone"/>

        <Button
            android:id="@+id/joinRoomButtonMain"
            android:layout_width="@dimen/_162sdp"
            android:layout_height="@dimen/_31sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/joinRoomText"
            android:background="@drawable/button_rounded"
            app:fontFamily="@font/fredoka_one"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:onClick="joinRoomClicked"/>

    </LinearLayout>

<!--    <com.google.android.gms.ads.AdView-->
<!--        xmlns:ads="http://schemas.android.com/apk/res-auto"-->
<!--        android:id="@+id/homeAd"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        ads:adSize="SMART_BANNER"-->
<!--        ads:adUnitId="@string/admob_banner_ad"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/homeButtonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/leftArrowButton"
                android:layout_width="@dimen/_58sdp"
                android:layout_height="@dimen/_58sdp"
                android:background="@drawable/ic_arrow_right"
                android:onClick="leftArrowClicked"
                android:scaleX="-1" />

            <LinearLayout
                android:layout_width="@dimen/_185sdp"
                android:layout_height="@dimen/_185sdp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/gameCoverImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/battleship_cover" />

            </LinearLayout>

            <ImageView
                android:id="@+id/rightArrowButton"
                android:layout_width="@dimen/_58sdp"
                android:layout_height="@dimen/_58sdp"
                android:background="@drawable/ic_arrow_right"
                android:onClick="rightArrowClicked" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_53sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingRight="@dimen/_53sdp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_31sdp"
                android:background="@drawable/widget_outline"
                android:gravity="center">

                <Spinner
                    android:id="@+id/gameListSpinnerMain"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_26sdp"
                    android:entries="@array/listOfGamesArray" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>